[package]
name = "greenthread-future"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Convert closures to futures based on greenthread on bare-metal (no_std + no_alloc)."
homepage = "https://github.com/wangrunji0408/greenthread-future-rs"
documentation = "https://docs.rs/greenthread-future"
readme = "README.md"
keywords = ["no_std", "async", "greenthread", "futures"]
categories = ["asynchronous", "no-std", "embedded"]
license = "MIT"
repository = "https://github.com/wangrunji0408/greenthread-future-rs"

[badges]
coveralls = { repository = "https://coveralls.io/github/wangrunji0408/greenthread-future-rs" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
